--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Nocturnidades
+html_title: N<i>octurnidades</i>
 email: emoriarty81@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   La intención inicial de este blog es publicar y compartir relatos, ideas y 
@@ -32,3 +33,6 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
+collections:
+  tales:
+    output: true
