--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ html_title: N<i>octurnidades</i>
 email: emoriarty81@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   La intención inicial de este blog es publicar y compartir relatos, ideas y 
-  tribulaciones varias surgidos desde un lugar oculto e innacessible.
+  tribulaciones varias. También tienen cabida documentos técnicos relacionados 
+  con la programación.
   El título del blog hace referencia al único momento del día (de la noche) 
   en que son concebidos y redactados.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -34,5 +35,5 @@ exclude:
   - Gemfile
   - Gemfile.lock
 collections:
-  tales:
+  relatos:
     output: true
