--- a/_config.prod.yml
+++ b/_config.prod.yml
@@ -1,3 +1,3 @@
-baseurl: "/nocturnidades" # the subpath of your site, e.g. /blog
-url: "https://emoriarty.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://nocturnidades.blog" # the base hostname & protocol for your site, e.g. http://example.com
 destination: docs
