Added analytics. Remoced CNAME from root folder. set JEKYLL_ENV for production build.

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ github_username:  emoriarty
 markdown: kramdown
 gems:
   - jekyll-feed
+keep_files:
+  - CNAME
 exclude:
   - Gemfile
   - Gemfile.lock
