--- a/_config.prod.yml
+++ b/_config.prod.yml
@@ -1,2 +1,4 @@
 url: "http://nocturnidades.blog" # the base hostname & protocol for your site, e.g. http://example.com
 destination: docs
+keep_files:
+  - CNAME
