Added robots.txt and sitemap.xml. Copyedit.

--- a/_config.yml
+++ b/_config.yml
@@ -45,3 +45,15 @@ collections:
 
 # Server
 host: 0.0.0.0
+
+defaults:
+  -
+    scope:
+      type: posts
+    values:
+      layout: post
+  -
+    scope:
+      type: relatos
+    values:
+      layout: tale
