--- a/_config.prod.yml
+++ b/_config.prod.yml
@@ -1,4 +1,4 @@
-url: "http://nocturnidades.blog" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://nocturnidades.blog"
 destination: docs
 keep_files:
   - CNAME
