Removed hiding page title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Nocturnidades
-html_title: N<i>octurnidades</i>
+html_title: Nocturnidades
 email: emoriarty81@gmail.com
 description: > 
   La intención inicial de este blog es publicar y compartir relatos, ideas y 
