--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ pagination:
   per_page: 5
   permalink: '/:num/'
   sort_reverse: true
+  title: 'Nocturnidades (:num)'
   trail: 
     before: 2
     after: 2
