--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ collections:
 # paging
 pagination:
   enabled: true
-  per_page: 5
+  per_page: 10
   permalink: '/:num/'
   sort_reverse: true
   title: 'Nocturnidades (:num)'
@@ -52,7 +52,7 @@ autopages:
   tags:
     layouts: 
       - 'autopages.html'
-    title: 'Artículos por tag :cat'
+    title: 'Artículos por tag :tag'
     permalink: '/tag/:tag'
 
 # Server
