--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ permalink: /:title
 # Build settings
 destination: docs
 markdown: kramdown
+## Also using https://github.com/penibelst/jekyll-compress-html
 gems:
   - jekyll-feed
   - jekyll-paginate-v2
