--- a/nocturnidades/package.json
+++ b/nocturnidades/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-remark": "^1.7.40",
     "gatsby-transformer-sharp": "^1.6.22",
     "lodash": "^4.17.5",
+    "react-jss": "^8.6.1",
     "typography-theme-kirkham": "^0.16.3"
   },
   "devDependencies": {
